Tema 5/Actividad 4/DockerComposeNetworkParser.py
# Generated from DockerComposeNetwork.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DockerComposeNetworkParser ( Parser ):

    grammarFileName = "DockerComposeNetwork.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'networks:'", "':'", "'driver'", "'attachable'", 
                     "'ipam'", "'driver_opts'", "'services:'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INDENT", "ID", "VALUE", "NEWLINE", "BLANK_LINE", 
                      "WS", "COMMENT" ]

    RULE_configFile = 0
    RULE_line = 1
    RULE_networksSection = 2
    RULE_networkDef = 3
    RULE_netProperty = 4
    RULE_servicesSection = 5
    RULE_serviceDef = 6
    RULE_serviceProperty = 7
    RULE_keyValuePair = 8

    ruleNames =  [ "configFile", "line", "networksSection", "networkDef", 
                   "netProperty", "servicesSection", "serviceDef", "serviceProperty", 
                   "keyValuePair" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    INDENT=8
    ID=9
    VALUE=10
    NEWLINE=11
    BLANK_LINE=12
    WS=13
    COMMENT=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ConfigFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DockerComposeNetworkParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeNetworkParser.LineContext)
            else:
                return self.getTypedRuleContext(DockerComposeNetworkParser.LineContext,i)


        def getRuleIndex(self):
            return DockerComposeNetworkParser.RULE_configFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigFile" ):
                listener.enterConfigFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigFile" ):
                listener.exitConfigFile(self)




    def configFile(self):

        localctx = DockerComposeNetworkParser.ConfigFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_configFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4994) != 0):
                self.state = 18
                self.line()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(DockerComposeNetworkParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def networksSection(self):
            return self.getTypedRuleContext(DockerComposeNetworkParser.NetworksSectionContext,0)


        def servicesSection(self):
            return self.getTypedRuleContext(DockerComposeNetworkParser.ServicesSectionContext,0)


        def keyValuePair(self):
            return self.getTypedRuleContext(DockerComposeNetworkParser.KeyValuePairContext,0)


        def INDENT(self):
            return self.getToken(DockerComposeNetworkParser.INDENT, 0)

        def BLANK_LINE(self):
            return self.getToken(DockerComposeNetworkParser.BLANK_LINE, 0)

        def getRuleIndex(self):
            return DockerComposeNetworkParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = DockerComposeNetworkParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.state = 34
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.networksSection()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.servicesSection()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 28
                self.keyValuePair()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 29
                    self.match(DockerComposeNetworkParser.INDENT)


                self.state = 32
                self.keyValuePair()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 33
                self.match(DockerComposeNetworkParser.BLANK_LINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetworksSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(DockerComposeNetworkParser.NEWLINE, 0)

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(DockerComposeNetworkParser.INDENT)
            else:
                return self.getToken(DockerComposeNetworkParser.INDENT, i)

        def networkDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeNetworkParser.NetworkDefContext)
            else:
                return self.getTypedRuleContext(DockerComposeNetworkParser.NetworkDefContext,i)


        def getRuleIndex(self):
            return DockerComposeNetworkParser.RULE_networksSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetworksSection" ):
                listener.enterNetworksSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetworksSection" ):
                listener.exitNetworksSection(self)




    def networksSection(self):

        localctx = DockerComposeNetworkParser.NetworksSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_networksSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(DockerComposeNetworkParser.T__0)
            self.state = 37
            self.match(DockerComposeNetworkParser.NEWLINE)
            self.state = 40 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 38
                    self.match(DockerComposeNetworkParser.INDENT)
                    self.state = 39
                    self.networkDef()

                else:
                    raise NoViableAltException(self)
                self.state = 42 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetworkDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DockerComposeNetworkParser.ID, 0)

        def NEWLINE(self):
            return self.getToken(DockerComposeNetworkParser.NEWLINE, 0)

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(DockerComposeNetworkParser.INDENT)
            else:
                return self.getToken(DockerComposeNetworkParser.INDENT, i)

        def netProperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeNetworkParser.NetPropertyContext)
            else:
                return self.getTypedRuleContext(DockerComposeNetworkParser.NetPropertyContext,i)


        def getRuleIndex(self):
            return DockerComposeNetworkParser.RULE_networkDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetworkDef" ):
                listener.enterNetworkDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetworkDef" ):
                listener.exitNetworkDef(self)




    def networkDef(self):

        localctx = DockerComposeNetworkParser.NetworkDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_networkDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(DockerComposeNetworkParser.ID)
            self.state = 45
            self.match(DockerComposeNetworkParser.T__1)
            self.state = 46
            self.match(DockerComposeNetworkParser.NEWLINE)
            self.state = 50 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 47
                    self.match(DockerComposeNetworkParser.INDENT)
                    self.state = 48
                    self.match(DockerComposeNetworkParser.INDENT)
                    self.state = 49
                    self.netProperty()

                else:
                    raise NoViableAltException(self)
                self.state = 52 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetPropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VALUE(self):
            return self.getToken(DockerComposeNetworkParser.VALUE, 0)

        def NEWLINE(self):
            return self.getToken(DockerComposeNetworkParser.NEWLINE, 0)

        def ID(self):
            return self.getToken(DockerComposeNetworkParser.ID, 0)

        def getRuleIndex(self):
            return DockerComposeNetworkParser.RULE_netProperty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetProperty" ):
                listener.enterNetProperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetProperty" ):
                listener.exitNetProperty(self)




    def netProperty(self):

        localctx = DockerComposeNetworkParser.NetPropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_netProperty)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 632) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 55
            self.match(DockerComposeNetworkParser.T__1)
            self.state = 56
            self.match(DockerComposeNetworkParser.VALUE)
            self.state = 57
            self.match(DockerComposeNetworkParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServicesSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(DockerComposeNetworkParser.NEWLINE, 0)

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(DockerComposeNetworkParser.INDENT)
            else:
                return self.getToken(DockerComposeNetworkParser.INDENT, i)

        def serviceDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeNetworkParser.ServiceDefContext)
            else:
                return self.getTypedRuleContext(DockerComposeNetworkParser.ServiceDefContext,i)


        def getRuleIndex(self):
            return DockerComposeNetworkParser.RULE_servicesSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServicesSection" ):
                listener.enterServicesSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServicesSection" ):
                listener.exitServicesSection(self)




    def servicesSection(self):

        localctx = DockerComposeNetworkParser.ServicesSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_servicesSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(DockerComposeNetworkParser.T__6)
            self.state = 60
            self.match(DockerComposeNetworkParser.NEWLINE)
            self.state = 63 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 61
                    self.match(DockerComposeNetworkParser.INDENT)
                    self.state = 62
                    self.serviceDef()

                else:
                    raise NoViableAltException(self)
                self.state = 65 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServiceDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DockerComposeNetworkParser.ID, 0)

        def NEWLINE(self):
            return self.getToken(DockerComposeNetworkParser.NEWLINE, 0)

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(DockerComposeNetworkParser.INDENT)
            else:
                return self.getToken(DockerComposeNetworkParser.INDENT, i)

        def serviceProperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeNetworkParser.ServicePropertyContext)
            else:
                return self.getTypedRuleContext(DockerComposeNetworkParser.ServicePropertyContext,i)


        def getRuleIndex(self):
            return DockerComposeNetworkParser.RULE_serviceDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServiceDef" ):
                listener.enterServiceDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServiceDef" ):
                listener.exitServiceDef(self)




    def serviceDef(self):

        localctx = DockerComposeNetworkParser.ServiceDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_serviceDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(DockerComposeNetworkParser.ID)
            self.state = 68
            self.match(DockerComposeNetworkParser.T__1)
            self.state = 69
            self.match(DockerComposeNetworkParser.NEWLINE)
            self.state = 73 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 70
                    self.match(DockerComposeNetworkParser.INDENT)
                    self.state = 71
                    self.match(DockerComposeNetworkParser.INDENT)
                    self.state = 72
                    self.serviceProperty()

                else:
                    raise NoViableAltException(self)
                self.state = 75 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServicePropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(DockerComposeNetworkParser.NEWLINE, 0)

        def INDENT(self, i:int=None):
            if i is None:
                return self.getTokens(DockerComposeNetworkParser.INDENT)
            else:
                return self.getToken(DockerComposeNetworkParser.INDENT, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DockerComposeNetworkParser.ID)
            else:
                return self.getToken(DockerComposeNetworkParser.ID, i)

        def VALUE(self):
            return self.getToken(DockerComposeNetworkParser.VALUE, 0)

        def getRuleIndex(self):
            return DockerComposeNetworkParser.RULE_serviceProperty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServiceProperty" ):
                listener.enterServiceProperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServiceProperty" ):
                listener.exitServiceProperty(self)




    def serviceProperty(self):

        localctx = DockerComposeNetworkParser.ServicePropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_serviceProperty)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(DockerComposeNetworkParser.T__0)
                self.state = 78
                self.match(DockerComposeNetworkParser.NEWLINE)
                self.state = 83 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 79
                        self.match(DockerComposeNetworkParser.INDENT)
                        self.state = 80
                        self.match(DockerComposeNetworkParser.INDENT)
                        self.state = 81
                        self.match(DockerComposeNetworkParser.INDENT)
                        self.state = 82
                        self.match(DockerComposeNetworkParser.ID)

                    else:
                        raise NoViableAltException(self)
                    self.state = 85 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(DockerComposeNetworkParser.ID)
                self.state = 88
                self.match(DockerComposeNetworkParser.T__1)
                self.state = 89
                self.match(DockerComposeNetworkParser.VALUE)
                self.state = 90
                self.match(DockerComposeNetworkParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyValuePairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DockerComposeNetworkParser.ID, 0)

        def VALUE(self):
            return self.getToken(DockerComposeNetworkParser.VALUE, 0)

        def NEWLINE(self):
            return self.getToken(DockerComposeNetworkParser.NEWLINE, 0)

        def getRuleIndex(self):
            return DockerComposeNetworkParser.RULE_keyValuePair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyValuePair" ):
                listener.enterKeyValuePair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyValuePair" ):
                listener.exitKeyValuePair(self)




    def keyValuePair(self):

        localctx = DockerComposeNetworkParser.KeyValuePairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_keyValuePair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(DockerComposeNetworkParser.ID)
            self.state = 94
            self.match(DockerComposeNetworkParser.T__1)
            self.state = 95
            self.match(DockerComposeNetworkParser.VALUE)
            self.state = 96
            self.match(DockerComposeNetworkParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





